--- a/theme/ladefense/css/ladefense.less
+++ b/theme/ladefense/css/ladefense.less
@@ -422,6 +422,24 @@ button{border: 2px solid white; &:hover{background: white; color:@bg}}
 		p a:hover, p a:active{background-color:white; color: @bg !important; text-decoration: none;}
 }
 
+/* Pour passer d'une page à une autre */
+.bouton-suite{
+				position: relative;
+    padding: .3em 1em;
+    border: 2px solid;
+    border-radius: 3px;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.7em!important;
+    -webkit-transition: all .2s;
+    -moz-transition: all .2s;
+    transition: all .2s;
+}
+
 /*BG IMAGE BLOCK*/
 header.bg-image{
 		background-repeat: no-repeat;
