--- a/theme/ladefense/css/ladefense.less
+++ b/theme/ladefense/css/ladefense.less
@@ -418,8 +418,8 @@ button{border: 2px solid white; &:hover{background: white; color:@bg}}
 		//padding-bottom: 80px;
 	h1,h2,h3,h4,h5,h6,p{color:white}
 	button{border: 2px solid white; &:hover{background: white; color:@bg}}
-		p a{box-shadow: inset 0 -2px 0 white; color:white; transition: all 0.3s ease; padding-bottom: 2px; }
-		p a:hover, p a:active{background-color:white; color: @bg !important; text-decoration: none;}
+		//p a{box-shadow: inset 0 -2px 0 white; color:white; transition: all 0.3s ease; padding-bottom: 2px; }
+		p a:hover, p a:active{background-color:white; text-decoration: none;}
 }
 
 /* Pour passer d'une page à une autre */
