--- a/theme/ladefense/css/ladefense.less
+++ b/theme/ladefense/css/ladefense.less
@@ -438,6 +438,7 @@ button{border: 2px solid white; &:hover{background: white; color:@bg}}
     -webkit-transition: all .2s;
     -moz-transition: all .2s;
     transition: all .2s;
+				color:white;
 }
 
 /*BG IMAGE BLOCK*/
