--- a/theme/ladefense/css/ladefense.less
+++ b/theme/ladefense/css/ladefense.less
@@ -21,8 +21,8 @@
 
 
 //// VARIABLES FOYERS-ETUDIANTS.ORG
-@bg:#41a0c7;
-@txt_blue : #0facc0;
+@bg:#0facc0;
+@txt_blue : #007b91;
 @txt_dark:#333;
 /*polic pour titre des foyers*/
 @font-face {
