--- a/theme/wtp18/templates/blocks/contentDetail/actualites.html
+++ b/theme/wtp18/templates/blocks/contentDetail/actualites.html
@@ -168,7 +168,7 @@
                 afkl-lazy-image="{{rubedo.imageUrl.getUrlByMediaId(fieldEntity['image'],{height:'400px',mode:'boxed'})}} 768w, {{rubedo.imageUrl.getUrlByMediaId(fieldEntity['image'] ,{height:'600px',mode:'boxed'})}} 972w, {{rubedo.imageUrl.getUrlByMediaId(fieldEntity['image']  ,{width:'1920px',mode:'boxed'})}} 1650w">
         <div class="container">
           <!--  <rubedo-field field= "{{contentDetailCtrl.getFieldByName('text')}}" ng-if="fieldEditMode && fieldEntity['text']"></rubedo-field>-->
-			<h2 ng-if="fieldEntity['text']">{{content.fields.text}}</h2>
+			<h2 ng-if="fieldEntity['text']">{{contentDetailCtrl.content.fields.text}}</h2>
         </div>
     </header>
 	<div style="background-color: white;">
@@ -215,9 +215,8 @@
 					</div>
 				</div>
 			</div>
-		</div>
-								<!---ANCIENS ALBUMS (non embedded images)-->
-		<div ng-if="contentDetailCtrl.content.fields.images && contentDetailCtrl.content.fields.images.length>0" class="row">
+				<!---ALBUMS-->
+			<div ng-if="contentDetailCtrl.content.fields.images && contentDetailCtrl.content.fields.images.length>0" class="row">
 						<div class="grid" masonry masonry-options="{ gutter: '.gutter-sizer',percentPosition: true }" reload-on-resize>
 										<div class="masonry-brick" ng-repeat="image in contentDetailCtrl.content.fields.images track by $index"  >
 														<img ng-src="{{rubedo.imageUrl.getUrlByMediaId(image,{width:'900',height:'600',mode:'boxed'})}}" style="width:100%"/>
@@ -240,6 +239,14 @@
 										</div>
 						</div>
 		</div>
+			
+			
+			
+			
+			
+		</div>
+							
+		
 	</div>
 </div>
 
