--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -582,6 +582,7 @@ header.parallax.page{
 @media screen and (max-width: @mobile){
 				header.parallax.page h1{font-size:2em;}
 				header.parallax.page{height:400px;line-height: 400px;}
+				header.parallax.page h2{font-size: 1.5em;}
 }
 /*@media screen and (min-width: @min_sm) {
     .large header.content{line-height: 600px; height:600px}
