--- a/theme/ladefense/css/ladefense.less
+++ b/theme/ladefense/css/ladefense.less
@@ -439,6 +439,7 @@ button{border: 2px solid white; &:hover{background: white; color:@bg}}
     -moz-transition: all .2s;
     transition: all .2s;
 				color:white;
+				&:hover{background: white; color:@bg !important}
 }
 
 /*BG IMAGE BLOCK*/
