--- a/theme/ladefense/css/ladefense.less
+++ b/theme/ladefense/css/ladefense.less
@@ -439,7 +439,7 @@ button{border: 2px solid white; &:hover{background: white; color:@bg}}
     -moz-transition: all .2s;
     transition: all .2s;
 				color:white;
-				&:hover{background: white; color:@bg !important}
+				&:hover{background: white; color:@bg !important;border: 2px white solid;border-radius: 3px;}
 }
 
 /*BG IMAGE BLOCK*/
@@ -450,7 +450,7 @@ header.bg-image{
 		background-size: cover;
     -moz-background-size: cover;
     -ms-background-size: cover;
-    -o-background-size: cover;
+    -o-background-size: cover; 
     -webkit-background-size: cover;
 				h1,h2,h3,h4,h5,p{color:white; font-family: 'trend_sansone'};
 		height:400px;
