--- a/theme/ladefense/css/ladefense.less
+++ b/theme/ladefense/css/ladefense.less
@@ -400,7 +400,7 @@ button{border: 2px solid white; &:hover{background: white; color:@bg}}
 }
 .fixed-nav{margin-bottom:100px;}
 @media screen and (max-width:768px) {
-		.navbar.navbar-default.transparent,.navbar.navbar-default.transparent:hover {background-color:rgb(34,49,63)}
+		.navbar.navbar-default.transparent,.navbar.navbar-default.transparent:hover {background-color:#003134;}  // anciennement rgb(34,49,63)
 		.navbar-default .navbar-collapse {border: none !important}
 				.navbar-default .navbar-toggle .icon-bar{background: @txt_blue;}
 		.navbar-default.transparent .navbar-toggle .icon-bar{background: white;}
