--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -870,7 +870,25 @@ header.content.prop>div{text-align: center; vertical-align: middle; padding-bott
 .txt-white{color:white !important}
 //ng-form .row{max-height: 0; transition: max-height 0.8s ease-out; display: block; overflow: hidden; margin: 0 15px; padding: 0; border: 0}
 
-
+/* Pour revenir à la page des NEWS */
+.bouton-suite{
+				position: relative;
+    padding: .3em 1em;
+    border: 2px solid;
+    border-radius: 3px;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.7em!important;
+    -webkit-transition: all .2s;
+    -moz-transition: all .2s;
+    transition: all .2s;
+				color:white;
+				&:hover{background: white; color:@bg !important;border: 2px white solid;border-radius: 3px;}
+}
 
 //input[type=text], input[type=number],textarea, input[type=email], input[type=text].form-control, input[type=number].form-control,textarea.form-control, input[type=email].form-control {
 //  width:100%; border:3px solid white; background-color: transparent !important; font-family: 'trend_sansone'; font-size: 18px; padding:4px 12px;
