--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -890,6 +890,8 @@ header.content.prop>div{text-align: center; vertical-align: middle; padding-bott
 				&:hover{background: white; color:@bg !important;border: 2px white solid;border-radius: 3px;}
 }
 
+a {color: white;}
+
 //input[type=text], input[type=number],textarea, input[type=email], input[type=text].form-control, input[type=number].form-control,textarea.form-control, input[type=email].form-control {
 //  width:100%; border:3px solid white; background-color: transparent !important; font-family: 'trend_sansone'; font-size: 18px; padding:4px 12px;
 //}
