--- a/theme/foyers/templates/blocks/contentList.html
+++ b/theme/foyers/templates/blocks/contentList.html
@@ -82,8 +82,8 @@
 											<div ng-if="!content.fields.image">
 												<div ng-style="{'height':contentListCtrl.contentHeight}">
 													<b>
-														<div style="border: 2px solid white;width: 150px;height: 150px;margin: auto;vertical-align: middle;border-radius: 50%;">
-															<p ng-if="!fieldEditMode" style="margin:10px 0 2px; font-family: trend_sansone;">{{content.fields.text}}</p>
+														<div style="">
+															<p ng-if="!fieldEditMode" style="margin:10px 0 2px; font-family: trend_sansone;display: table-cell;vertical-align: middle;background: rgba(0,0,0,0.1);border-radius: 50%;width: 180px;height: 180px;line-height: 2em;border: 10px solid rgba(255,255,255,0.3);color: white; text-align: center;">{{content.fields.text}}</p>
 														</div>
 													</b>
 													<p class="hidden-xxs" style="margin:10px 3px 40px">
