--- a/theme/foyers/templates/blocks/contentList.html
+++ b/theme/foyers/templates/blocks/contentList.html
@@ -54,7 +54,7 @@
                    </div>
 					
 					<!---TEMOIGNAGES-->
-					<div ng-switch-when="5b031552396588af658b4567" class="row bg-videos padding-tb" >
+					<div ng-switch-when="5b031552396588af658b4567" class="row bg-videos padding-tb" style="min-height: 180px;">
 						<!--<div class="row bg-videos padding-tb" >
 							<div ng-style="contentListCtrl.blockStyle" class="container">
 								<!--<div id="infiniteScrollCtrl">-->
@@ -82,7 +82,7 @@
 											<div ng-if="!content.fields.image">
 												<div ng-style="{'height':contentListCtrl.contentHeight}">
 													<b>
-														<div style="">
+														<div style="display: table-cell;margin-left: auto;margin-right: auto;">
 															<p ng-if="!fieldEditMode" style="margin:10px 0 2px; font-family: trend_sansone;display: table-cell;vertical-align: middle;background: rgba(0,0,0,0.1);border-radius: 50%;width: 180px;height: 180px;line-height: 2em;border: 10px solid rgba(255,255,255,0.3);color: white; text-align: center;">{{content.fields.text}}</p>
 														</div>
 													</b>
