--- a/theme/foi/templates/blocks/contentDetail/article_foi.html
+++ b/theme/foi/templates/blocks/contentDetail/article_foi.html
@@ -60,7 +60,7 @@
 							</div>
 						</div>
 					</div>
-					<rubedo-field field = "{{contentDetailCtrl.getFieldByName('summary')}}" ng-if="fieldEntity['summary']" class="'"></rubedo-field>
+					<p>{{content.fields.summary}}</p>
 					<rubedo-field field = "{{contentDetailCtrl.getFieldByName('richText')}}" ng-if="fieldEntity['richText']" class="contenu_article"></rubedo-field>
 					
 									<!-- ACCES ABONNE -->
