--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -400,6 +400,12 @@ a:hover .redacteur{
 p .resume {
 		color:@grey !important;
 }
+.summary{
+				font-weight: bold;
+    text-align: justify;
+    margin-bottom: 50px;
+    font-size: 1.07em;
+}
 
 .bandeau img{
 		width: 100%;
