--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -819,6 +819,26 @@ ng-form .row{margin: 0 15px;margin-bottom:12px; }
 .contentList > div{text-align: center}
 .contentList > div > div{text-align: left; float: none; display: inline-block; vertical-align: top}
 
+// Présentation des témoignages sans photo //
+.text-cercle{
+				margin:10px 0 2px;
+				font-family: trend_sansone;
+				display: table-cell;
+				vertical-align: middle;
+				background: rgba(0,0,0,0.1);
+				border-radius: 50%;
+				width: 180px;
+				height: 180px;
+				line-height: 2em;
+				border: 10px solid rgba(255,255,255,0.3);
+				color: white;
+				text-align: center;
+}
+.cell-temoignage{
+				display: table-cell;
+				margin-left: auto;
+				margin-right: auto;
+}
 
 
 ////////////////////////////////////////////////////
