--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -6,6 +6,7 @@
 @txt:#252525;
 @grey:#c2c2c2;
 @grey2:#aaa;
+@grey3:#7d7c7c;
 @beige:#f3eeea;
 /*BOOTSTRAP VARIABLES*/
 @width_xxs:420px;
@@ -400,11 +401,12 @@ a:hover .redacteur{
 p .resume {
 		color:@grey !important;
 }
-.summary{
+.intro{
 				font-weight: bold;
     text-align: justify;
     margin-bottom: 50px;
     font-size: 1.07em;
+				color:@grey3 !important;
 }
 
 .bandeau img{
