--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -6,7 +6,7 @@
 @txt:#252525;
 @grey:#c2c2c2;
 @grey2:#aaa;
-@grey3:#7d7c7c;
+@grey3:#676262;
 @beige:#f3eeea;
 /*BOOTSTRAP VARIABLES*/
 @width_xxs:420px;
