--- a/theme/foi/templates/blocks/contentDetail/foi.html
+++ b/theme/foi/templates/blocks/contentDetail/foi.html
@@ -13,7 +13,7 @@
         <h3 ng-if="!fieldEditMode" style="border-bottom: 1px solid;padding-bottom: 12px;">Sommaire - {{fieldEntity['text']}}</h3>
         <rubedo-field ng-if="fieldEditMode" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Plan-->
 		<div class="sommaire">	
-			<div ng-repeat="content in contentDetailCtrl.infoArticles.data | orderBy :'createTime' track by $index"> 
+			<div ng-repeat="content in contentDetailCtrl.infoArticles.data track by $index"> 
 				<p class="red-sub" ng-show="displayTaxo[$index]" class="categorie">{{contentDetailCtrl.infoArticles.facetsLabels[content['taxonomy.5a114f1b396588d22856706f'][0]]}}</p>
 				<p  class="article"><a ng-href="{{ content.url }}">{{ content.text[0] }}</a></p>
 				<div ng-show="displayTaxo[$index+1]"><br/><br/></div>
