--- a/theme/cana_org/templates/blocks/languageMenu.html
+++ b/theme/cana_org/templates/blocks/languageMenu.html
@@ -14,12 +14,12 @@
             </li>
         </ul>
     </div>
-    <!--<div ng-if="!languageMenuCtrl.mode" class="btn-group">
+    <div ng-if="!languageMenuCtrl.mode" class="btn-group">
         <a ng-repeat="lang in languageMenuCtrl.languages track by $index" ng-class="{'disabled':languageMenuCtrl.isDisabled(lang.lang)}"
            class="btn btn-default" ng-click="languageMenuCtrl.changeLang(lang.lang)" ng-show="languageMenuCtrl.isTranslated(lang.lang)" href>
             <i ng-if="languageMenuCtrl.showFlags"><img ng-src="{{languageMenuCtrl.getFlagUrl(lang.flagCode)}}" alt="{{lang.flagCode}}"/></i>
             {{lang.lang}}
         </a>
-    </div>-->
+    </div>
 
 </div>
