--- a/theme/cana_org/templates/blocks/navigation.html
+++ b/theme/cana_org/templates/blocks/navigation.html
@@ -29,17 +29,18 @@
                             </li>
                         </ul>
                     </li>
-                    <!--<li ng-controller="LanguageMenuController as languageMenuCtrl" class="languageMenu">
+                    <li ng-controller="LanguageMenuController as languageMenuCtrl" class="languageMenu">
                         <a  class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown" >{{languageMenuCtrl.currentLang.lang |uppercase}} <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li ng-repeat="lang in languageMenuCtrl.languages track by $index" >
-                                <a ng-click="languageMenuCtrl.changeLang(lang.lang)" href>
+                            <li ng-repeat="lang in languageMenuCtrl.languages track by $index" > <!--ng-if="(lang.lang !='de' ) || rubedo.current.user"-->
+                                <a ng-click="languageMenuCtrl.changeLang(lang.lang.toLowerCase())" href>
                                     <i ng-if="languageMenuCtrl.showFlags"><img ng-src="{{languageMenuCtrl.getFlagUrl(lang.flagCode)}}" alt="{{lang.flagCode}}"/></i>
-                                    {{lang.lang |uppercase}}
+                                    {{lang.lang}}
                                 </a>
                             </li>
+                            
                         </ul>
-                    </li>-->
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <form class="navbar-form" ng-if="menuCtrl.searchEnabled" ng-submit="menuCtrl.onSubmit()" role="form">
