--- a/theme/9media/templates/blocks/navigation.html
+++ b/theme/9media/templates/blocks/navigation.html
@@ -1,56 +1,71 @@
-<nav class="navbar navbar-fixed-top" role="navigation" ng-controller="MenuController as menuCtrl"  scroll-position="scroll" ng-class="{'transparent':(rubedo.current.page.id==blockConfig.rootPage && scroll<500)}">
-    <div class="container-fluid" style="overflow: visible">
+<div ng-controller="MenuController as menuCtrl" >
+	<nav  role="navigation" class="top-navigation">
+		<div class="home">
+			<a href="https://welcometoparadise.chemin-neuf.fr/fr/" class="ng-scope">
+			<img alt="" style="height:90px;" class="img-responsive" ng-src="/dam?media-id=5a6f4c1d396588d25e999bd9&amp;">
+			</a>
+		</div>
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">{{rubedo.translate("Blocks.Navigation.Label.ToggleNavigation", "Toggle navigation")}}</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a scroll-position="scroll2" ng-if="blockConfig.displayRootPage && blockConfig.imageFile" class="navbar-brand " ng-href="{{menuCtrl.menu.url}}">
-                <img   ng-src="{{rubedo.imageUrl.getUrlByMediaId(blockConfig.imageFile ,{height:'60px',mode:'boxed'})}}" ng-if="rubedo.current.page.id!=blockConfig.rootPage || (rubedo.current.page.id==blockConfig.rootPage&&scroll2>=500)"/>
-                <img   ng-src="{{rubedo.imageUrl.getUrlByMediaId('5954bcb73965886261c47040' ,{height:'60px',mode:'boxed'})}}" ng-if="rubedo.current.page.id==blockConfig.rootPage&&scroll2<500"/>
-               <!-- -->
-            </a>
+            <ul class="navbar-nav nav navbar-toggle" data-target="#bs-example-navbar-collapse-1">
+				<!--<li class="home-button">
+					<a  ng-href="{{menuCtrl.menu.url}}">$</a>
+				</li>-->
+				<li id="push-button" class="home-button" ng-click="ToggleNav()" ><a>Æ</a></li>
+            </ul>
         </div>
-        <div class="container">
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li ng-if="blockConfig.displayRootPage"><a ng-if="blockConfig.displayRootPage" ng-href="{{menuCtrl.menu.url}}">{{menuCtrl.menu.text}}</a></li>
-                    <li ng-repeat="page in menuCtrl.menu.pages track by $index"
-                        ng-class="{active:menuCtrl.currentRouteline.indexOf(page.url+'/') > -1 ||  menuCtrl.currentRouteline.indexOf(page.url,menuCtrl.currentRouteline.length-page.url.length) > -1, dropdown:page.pages&&blockConfig.menuLevel>1}">
-                        <a ng-if="!page.pages||blockConfig.menuLevel<=1" ng-href="{{page.url}}"> {{page.text}}</a>
-                        <a ng-if="page.pages&&blockConfig.menuLevel>1" class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown" >{{page.text}} <span class="caret"></span></a>
-                        <ul ng-if="page.pages&&blockConfig.menuLevel>1" class="dropdown-menu" role="menu">
-                            <li ng-if="!blockConfig.disableLevelOne" ng-class="{active:rubedo.current.page.id==page.id}"><a ng-href="{{page.url}}">{{page.text}}</a></li>
-                            <li ng-if="!blockConfig.disableLevelOne" class="divider"></li>
-                            <li ng-repeat="subpage in page.pages track by $index" ng-class="{active:menuCtrl.currentRouteline.indexOf(subpage.url+'/') > -1 ||  menuCtrl.currentRouteline.indexOf(subpage.url,menuCtrl.currentRouteline.length-subpage.url.length) > -1}">
-                                <a ng-href="{{subpage.url}}">{{subpage.text}}</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li ng-controller="LanguageMenuController as languageMenuCtrl" class="languageMenu">
-                        <a  class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown" >{{languageMenuCtrl.currentLang.lang |uppercase}} <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li ng-repeat="lang in languageMenuCtrl.languages track by $index" > <!--ng-if="(lang.lang !='de' ) || rubedo.current.user"-->
-                                <a ng-click="languageMenuCtrl.changeLang(lang.lang)" href>
-                                    <i ng-if="languageMenuCtrl.showFlags"><img ng-src="{{languageMenuCtrl.getFlagUrl(lang.flagCode)}}" alt="{{lang.flagCode}}"/></i>
-                                    {{lang.lang |uppercase}}
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <form class="navbar-form" ng-if="menuCtrl.searchEnabled" ng-submit="menuCtrl.onSubmit()" role="form">
-                        <div class="input-group">
-                            <input class="form-control" type="text" ng-model="menuCtrl.query" ng-attr-placeholder="{{rubedo.translate('Search.Label.Search','Search')}}"/>
-                                <span class="input-group-btn"><button class="btn btn-default" type="submit">
-                                    <span class="glyphicon glyphicon-search"></span></button></span>
-                        </div>
-                    </form>
-                </ul>
-            </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="padding-left:110px">
+            <ul class="nav navbar-nav">
+            	<!--<li id="push-button" class="home-button visible-xs-block" ng-click="ToggleNav()"><a>Æ</a></li>-->
+				<li class="home-button">
+					<a  ng-href="{{menuCtrl.menu.url}}">$</a> 
+				</li>
+				<li ng-repeat="page in menuCtrl.pagesBlocks" ng-class="{active:menuCtrl.currentRouteleine.indexOf(page.url) > -1, dropdown:page.blocks.length>1}">
+						<!--<a ng-if="!page.pages||blockConfig.menuLevel<=1" ng-href="{{page.url}}">{{page.text}}</a>-->
+					<a ng-if="page.blocks.length<=1  " ng-href="{{page.url}}">{{page.title |uppercase}}</a>
+	
+				<!--<a href="/fr/accueil/festival" class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown">Festival</a>-->
+					<a ng-if="page.blocks.length>1" class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown" >{{page.title}}</a>
+					<ul ng-if="page.blocks.length>1" class="dropdown-menu" role="menu">
+						<li ng-repeat="bloc in page.blocks | orderBy :'order' track by $index" class="" >
+					<!--<a ng-if="menuCtrl.currentRouteleine.indexOf(page.url) > -1" ng-href="{{page.url}}#{{bloc.title | split:'/':0}}">{{bloc.title | split:'/':1}}</a>-->
+							<a  ng-href="{{page.url}}?page={{bloc.code}}">{{bloc.title | split:'//':0}}</a>
+						</li>
+					</ul>
+				</li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right" ng-controller="LanguageMenuController as languageMenuCtrl" style="position:absolute; right:0">
+				<li class="home-button hidden-xs" >
+					<a rubedo-page-link="5a630da239658886137fcea7">C</a>
+				</li>
+				<li class="home-button hidden-xs hidden-sm" target="_blank">
+					<a href="https://twitter.com/@Festival_WTP" style="text-transform:none">ú</a>
+				</li>
+				<li class="home-button hidden-xs hidden-sm" target="_blank">
+					<a href="https://facebook.com/festivalwelcometoparadise">\</a>
+				</li>
+				<li class="home-button hidden-xs hidden-sm" target="_blank">
+					<a href="https://youtube.com/Jeunes1830ans">’</a>
+				</li>
+				<li ng-controller="LanguageMenuController as languageMenuCtrl">
+					<div class="btn-group nav-item language">
+						<span>
+							<img  ng-src="{{languageMenuCtrl.getFlagUrl(languageMenuCtrl.currentLang.flagCode)}}" alt="{{languageMenuCtrl.currentLang.flagCode}}" style="vertical-align: top"/>
+						</span>
+						<div>
+						<a ng-repeat="lang in languageMenuCtrl.languages" ng-click="languageMenuCtrl.changeLang(lang.lang)" href ng-if="lang.lang != languageMenuCtrl.currentLang.lang">
+							<span ><img ng-src="{{languageMenuCtrl.getFlagUrl(lang.flagCode)}}" alt="{{lang.flagCode}}"/></span>
+						</a>
+					</div>
+				
+				</li>
+			</ul>
+
+
+	
+					
+					<!--	-->
+
+
         </div>
-    </div>
-</nav>
+    </nav>
+</div>
