--- a/theme/9media/templates/blocks/navigation.html
+++ b/theme/9media/templates/blocks/navigation.html
@@ -1,18 +1,13 @@
 <div ng-controller="MenuController as menuCtrl" >
 	<nav  role="navigation" class="top-navigation">
+        <!-- Bouton home 9media -->
 		<div class="home">
 			<a href="https://welcometoparadise.chemin-neuf.fr/fr/" class="ng-scope">
 			<img alt="" style="height:90px;" class="img-responsive" ng-src="/dam?media-id=5a6f4c1d396588d25e999bd9&amp;">
 			</a>
 		</div>
-        <div class="navbar-header">
-            <ul class="navbar-nav nav navbar-toggle" data-target="#bs-example-navbar-collapse-1">
-				<!--<li class="home-button">
-					<a  ng-href="{{menuCtrl.menu.url}}">$</a>
-				</li>-->
-				<li id="push-button" class="home-button" ng-click="ToggleNav()" ><a>Æ</a></li>
-            </ul>
-        </div>
+
+        <!-- Liens vers les pages de niveau 1 -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="padding-left:110px">
             <ul class="nav navbar-nav">
             	<!--<li id="push-button" class="home-button visible-xs-block" ng-click="ToggleNav()"><a>Æ</a></li>-->
