purified menu html

--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -72,6 +72,16 @@
 @rouge:#92220c;
 @bleu_bethanien:#006ba8;
 
+////////////////////////////////////////////////
+    /////// 9media ////////////////
+////////////////////////////////////////////////
+.top-navigation {
+	display: flex;
+}
+
+
+
+
 
 
 body{font-size:16px; min-height:100%; line-height: 1.4em }
