--- a/theme/9media/templates/blocks/navigation.html
+++ b/theme/9media/templates/blocks/navigation.html
@@ -8,59 +8,26 @@
 		</div>
 
         <!-- Liens vers les pages de niveau 1 -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="padding-left:110px">
-            <ul class="nav navbar-nav">
-            	<!--<li id="push-button" class="home-button visible-xs-block" ng-click="ToggleNav()"><a>Æ</a></li>-->
-				<li class="home-button">
-					<a  ng-href="{{menuCtrl.menu.url}}">$</a> 
-				</li>
-				<li ng-repeat="page in menuCtrl.pagesBlocks" ng-class="{active:menuCtrl.currentRouteleine.indexOf(page.url) > -1, dropdown:page.blocks.length>1}">
-						<!--<a ng-if="!page.pages||blockConfig.menuLevel<=1" ng-href="{{page.url}}">{{page.text}}</a>-->
-					<a ng-if="page.blocks.length<=1  " ng-href="{{page.url}}">{{page.title |uppercase}}</a>
-	
-				<!--<a href="/fr/accueil/festival" class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown">Festival</a>-->
-					<a ng-if="page.blocks.length>1" class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown" >{{page.title}}</a>
-					<ul ng-if="page.blocks.length>1" class="dropdown-menu" role="menu">
-						<li ng-repeat="bloc in page.blocks | orderBy :'order' track by $index" class="" >
-					<!--<a ng-if="menuCtrl.currentRouteleine.indexOf(page.url) > -1" ng-href="{{page.url}}#{{bloc.title | split:'/':0}}">{{bloc.title | split:'/':1}}</a>-->
-							<a  ng-href="{{page.url}}?page={{bloc.code}}">{{bloc.title | split:'//':0}}</a>
-						</li>
-					</ul>
-				</li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right" ng-controller="LanguageMenuController as languageMenuCtrl" style="position:absolute; right:0">
-				<li class="home-button hidden-xs" >
-					<a rubedo-page-link="5a630da239658886137fcea7">C</a>
-				</li>
-				<li class="home-button hidden-xs hidden-sm" target="_blank">
-					<a href="https://twitter.com/@Festival_WTP" style="text-transform:none">ú</a>
-				</li>
-				<li class="home-button hidden-xs hidden-sm" target="_blank">
-					<a href="https://facebook.com/festivalwelcometoparadise">\</a>
-				</li>
-				<li class="home-button hidden-xs hidden-sm" target="_blank">
-					<a href="https://youtube.com/Jeunes1830ans">’</a>
-				</li>
-				<li ng-controller="LanguageMenuController as languageMenuCtrl">
-					<div class="btn-group nav-item language">
-						<span>
-							<img  ng-src="{{languageMenuCtrl.getFlagUrl(languageMenuCtrl.currentLang.flagCode)}}" alt="{{languageMenuCtrl.currentLang.flagCode}}" style="vertical-align: top"/>
-						</span>
-						<div>
-						<a ng-repeat="lang in languageMenuCtrl.languages" ng-click="languageMenuCtrl.changeLang(lang.lang)" href ng-if="lang.lang != languageMenuCtrl.currentLang.lang">
-							<span ><img ng-src="{{languageMenuCtrl.getFlagUrl(lang.flagCode)}}" alt="{{lang.flagCode}}"/></span>
-						</a>
-					</div>
-				
-				</li>
-			</ul>
-
-
-	
-					
-					<!--	-->
-
-
-        </div>
+        <ul class="nav navbar-nav">
+            <li ng-repeat="page in menuCtrl.pagesBlocks" ng-class="{menupage_active:menuCtrl.currentRouteline.indexOf(page.url) > -1}">
+                <a ng-href="{{page.url}}">{{page.title | uppercase}}</a>
+            </li>
+        </ul>
+            
+        <!-- Liens vers les réseaux sociaux -->
+        <ul class="nav navbar-nav navbar-right" ng-controller="LanguageMenuController as languageMenuCtrl" style="position:absolute; right:0">
+            <li class="home-button hidden-xs" >
+                <a rubedo-page-link="5a630da239658886137fcea7">C</a>
+            </li>
+            <li class="home-button hidden-xs hidden-sm" target="_blank">
+                <a href="https://twitter.com/@9media">ú</a>
+            </li>
+            <li class="home-button hidden-xs hidden-sm" target="_blank">
+                <a href="https://facebook.com/9media">\</a>
+            </li>
+            <li class="home-button hidden-xs hidden-sm" target="_blank">
+                <a href="https://youtube.com/9media">’</a>
+            </li>
+        </ul>
     </nav>
 </div>
