--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -9,6 +9,7 @@
     clear: both;
   }
 }
+@import url("https://fonts.googleapis.com/css?family=Oswald");
 @font-face {
     font-family: Hautecombe;
     src: url(/theme/9media/fonts/Hautecombe-2014.eot);
