--- a/theme/9media/templates/blocks/carrousel_fullWidth2.html
+++ b/theme/9media/templates/blocks/carrousel_fullWidth2.html
@@ -1,5 +1,12 @@
 <style>
-.carousel-control{
+ .carousel-indicators {
+    width: 30px;
+    height: 30px;
+    border-radius: 30px;
+    margin: 0;
+}
+ .carousel-indicators li,.carousel-indicators li.active{margin:1px 6px}        
+        .carousel-control{
     background-image: none; 
 }
 .carousel-control span{top:45%}
@@ -7,7 +14,7 @@
    
    .carousel-inner .item {
        transition-property: opacity;
-       line-height: 100vh; 
+       line-height: 300vh; 
    }
         
         .carousel-inner .item,
@@ -21,6 +28,7 @@
         .carousel-inner .prev.right {
             opacity: 1;
         }
+        
 
         .carousel-inner .next,
         .carousel-inner .prev,
@@ -38,9 +46,10 @@
 }
 
 .carousel-inner {
-    height: 100vh;
-    /*min-height:350px;
-    max-height: 600px;*/
+    height: 70vh;
+    background-color: white;
+    min-height:350px;
+    max-height: 800px;
 }
 
 /* Background images are set within the HTML using inline CSS, not here */
@@ -48,42 +57,39 @@
 .fill {
     width: 100%;
     height: 100%;
+    background-color: white;
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-    text-align: center;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
 }
 .homepage_txt {
-    display: inline-block; vertical-align: middle; transform:rotateZ(-3deg);
+    position: absolute;
+    bottom: 20%;
+    width:100%;
+    margin:0 ;
     text-align: center;
     color:white;
-    line-height: 1em; text-transform: uppercase;
+    .h2 {
+      text-transform: uppercase;
+      margin: 0 10% 0 10%;
+      font-size: 30px;
+      opacity: 0.96;
+    }
 }
-.homepage_txt:before, .homepage_txt:after{
- content:'';transform:rotateZ(3deg);
- width:3px; background-color:white; height:5px; position: relative; display: inline-block; 
- -webkit-transition: all ease-out 0.5s;
- -moz-transition: all ease-out 0.5s;
- transition: all ease-out 0.5s;
- opacity: 0;
+@media screen and (min-width:500px){
+     .homepage_txt h1{font-size: 4em;}
 }
- .homepage_txt:after{transition-delay: 0.7s}
-.homepage_txt p, .homepage_txt h1{position: relative; font-size: 300%;line-height: 0.9em; color:white; text-shadow: 2.5px 2.5px 2.5px rgba(0,0,0,.33); opacity: 0; 
-    -webkit-transition: all ease-out 0.7s; 
-    -moz-transition: all ease-out 0.7s; 
-    transition: all ease-out 0.7s; 
-    top: 50px;transition-delay:0.2s}
+.homepage_txt p, .homepage_txt h1{line-height: 0.9em; color:white; text-shadow: 2.5px 2.5px 2.5px rgba(0,0,0,.33)}
 .homepage_txt p:first-of-type{ font-size:1.3em;}
-.item.active .homepage_txt:before,.item.active .homepage_txt:after{
- height:40px; opacity: 1;
-}
-.item.active .homepage_txt p,.item.active .homepage_txt h1{
- top:0; opacity: 1;
-}
+
+
 
 @media screen and (max-width:500px){
+        .homepage_txt h1{font-size: 2em;}
         .carousel-inner{height:50vh}
         /*.homepage_txt p:nth-of-type(2){ font-size:25px}
         .homepage_txt p:nth-of-type(2){ font-size:30px; font-weight:bold;}
@@ -94,8 +100,16 @@
 
 </style>
 
-<div id="{{'block'+block.id}}" class="carousel slide carousel-fade" ng-controller="FWCarouselController as carouselCtrl" style="margin-top:-24px;margin-bottom:-24px;">
-
+<div id="{{'block'+block.id}}" class="carousel slide carousel-fade" ng-controller="FWCarouselController as carouselCtrl">
+  <ol class="carousel-indicators">
+    <li ng-repeat="content in carouselCtrl.contents" 
+      ng-if="content.fields[blockConfig.imageField]" 
+      data-target="{{'block'+block.id}}"
+      data-slide-to="{{$index}}"
+      ng-class="{'active':$first}"
+      ng-click="carouselCtrl.slideTo($index)">
+    </li>
+  </ol>
 
   <div class="carousel-inner">
       <div class="item" 
@@ -103,21 +117,15 @@
             ng-if="content.fields[blockConfig.imageField]"
             ng-class="{'active':$first}">
           <!-- Set the first background image using inline CSS below. -->
-          <div class="fill" style="background-image:url('{{rubedo.imageUrl.getUrlByMediaId(content.fields[blockConfig.imageField],carouselCtrl.getImageOptions())}}');">
+          <div class="fill" style="background-image:url('{{rubedo.imageUrl.getUrlByMediaId(content.fields[blockConfig.imageField],carouselCtrl.getImageOptions())}}');"></div>
           <div class="homepage_txt" ng-if="blockConfig.showCaption">
-              <h1>{{content.fields.text}}</h1>
-              <p ng-if="content.fields.titre2">{{content.fields.titre2}}</p>
+              <h2>{{content.fields.titre2}}</h2>
               <p ng-repeat="text in content.fields.subTitle">{{text}}</p>
-          </div></div>
+          </div>
       </div>
   </div>
-<!-- Controls -->
-  <div class="left carousel-control" role="button" ng-click="carouselCtrl.slideTo('prev')">
-    <span class="fa fa-angle-left" aria-hidden="true"></span>
-  </div>
-  <div class="right carousel-control" role="button" ng-click="carouselCtrl.slideTo('next')">
-    <span class="fa fa-angle-right" aria-hidden="true"></span>
-  </div>
+       <!-- Controls -->
+
   
 </div>
 
