--- a/theme/9media/templates/blocks/navigation.html
+++ b/theme/9media/templates/blocks/navigation.html
@@ -9,6 +9,9 @@
 
         <!-- Liens vers les pages de niveau 1 -->
         <ul class="nav navbar-nav">
+            <li ng-class="{menupage_active:menuCtrl.currentRouteline.indexOf(menuCtrl.url) > -1}">
+                    <a ng-href="{{menuCtrl.url}}">ACCUEIL</a>
+            </li>
             <li ng-repeat="page in menuCtrl.pagesBlocks" ng-class="{menupage_active:menuCtrl.currentRouteline.indexOf(page.url) > -1}">
                 <a ng-href="{{page.url}}">{{page.title | uppercase}}</a>
             </li>
