--- a/theme/9media/templates/blocks/carrousel_fullWidth.html
+++ b/theme/9media/templates/blocks/carrousel_fullWidth.html
@@ -1,11 +1,12 @@
 <style>
- .carousel-indicators {
-    width: 30px;
-    height: 30px;
-    border-radius: 30px;
-    margin: 0;
+
+ .carousel-indicators li,.carousel-indicators li.active{
+  margin:1px 6px;
+  width: 2em;
+  height: 2em;
+  border-radius: 2em;
 }
- .carousel-indicators li,.carousel-indicators li.active{margin:1px 6px}        
+ }        
         .carousel-control{
     background-image: none; 
 }
@@ -85,6 +86,12 @@
 }
 .homepage_txt p, .homepage_txt h1{line-height: 0.9em; color:white; text-shadow: 2.5px 2.5px 2.5px rgba(0,0,0,.33)}
 .homepage_txt p:first-of-type{ font-size:1.3em;}
+.homepage_txt h2 {
+      text-transform: uppercase;
+      margin: 0 10% 0 10%;
+      font-size: 30px;
+      opacity: 0.96;
+    }
 
 
 
