added font Oswald-Light

--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -10,6 +10,12 @@
   }
 }
 @import url("https://fonts.googleapis.com/css?family=Oswald");
+
+@font-face {
+	font-family: 'Oswald Light';
+	src: url('https://fonts.googleapis.com/css?family=Oswald:300');
+}
+
 @font-face {
     font-family: Hautecombe;
     src: url(/theme/9media/fonts/Hautecombe-2014.eot);
@@ -56,6 +62,13 @@
     font-family: RaananaBold;
     src: url(/theme/9media/fonts/RaananaBold.eot);
     src: url(/theme/9media/fonts/RaananaBold.eot) format('embedded-opentype'), url(/theme/9media/fonts/RaananaBold.woff) format('woff'), url(/theme/9media/fonts/RaananaBold.ttf) format('truetype'), url(/theme/9media/fonts/RaananaBold.svg) format('svg');
+    font-style: normal
+}
+
+@font-face {
+    font-family: 'Oswald Light';
+    src: url(/theme/9media/fonts/Oswald-Light.eot);
+    src: url(/theme/9media/fonts/Oswald-Light.eot) format('embedded-opentype'), url(/theme/9media/fonts/Oswald-Light.woff) format('woff'), url(/theme/9media/fonts/Oswald-Light.ttf) format('truetype'), url(/theme/9media/fonts/Oswald-Light.svg) format('svg');
     font-style: normal
 }
 ////////////////////////////////////////////////
