--- a/theme/9media/css/9media.css
+++ b/theme/9media/css/9media.css
@@ -5,6 +5,10 @@
   src: local('Oswald Regular'), local('Oswald-Regular'), url(https://fonts.gstatic.com/s/oswald/v16/TK3iWkUHHAIjg752GT8D.ttf) format('truetype');
 }
 @font-face {
+  font-family: 'Oswald Light';
+  src: url('https://fonts.googleapis.com/css?family=Oswald:300');
+}
+@font-face {
   font-family: Hautecombe;
   src: url(/theme/9media/fonts/Hautecombe-2014.eot);
   src: url(/theme/9media/fonts/Hautecombe-2014.eot) format('embedded-opentype'), url(/theme/9media/fonts/Hautecombe-2014.woff) format('woff'), url(/theme/9media/fonts/Hautecombe-2014.ttf) format('truetype'), url(/theme/9media/fonts/Hautecombe-2014.svg) format('svg');
@@ -44,6 +48,12 @@
   font-family: RaananaBold;
   src: url(/theme/9media/fonts/RaananaBold.eot);
   src: url(/theme/9media/fonts/RaananaBold.eot) format('embedded-opentype'), url(/theme/9media/fonts/RaananaBold.woff) format('woff'), url(/theme/9media/fonts/RaananaBold.ttf) format('truetype'), url(/theme/9media/fonts/RaananaBold.svg) format('svg');
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Oswald Light';
+  src: url(/theme/9media/fonts/Oswald-Light.eot);
+  src: url(/theme/9media/fonts/Oswald-Light.eot) format('embedded-opentype'), url(/theme/9media/fonts/Oswald-Light.woff) format('woff'), url(/theme/9media/fonts/Oswald-Light.ttf) format('truetype'), url(/theme/9media/fonts/Oswald-Light.svg) format('svg');
   font-style: normal;
 }
 .top-navigation {
