--- a/theme/9media/ckeditor/styles.less
+++ b/theme/9media/ckeditor/styles.less
@@ -53,6 +53,12 @@
   src: url(/theme/9media/fonts/RaananaBold.eot) format('embedded-opentype'), url(/theme/9media/fonts/RaananaBold.woff) format('woff'), url(/theme/9media/fonts/RaananaBold.ttf) format('truetype'), url(/theme/9media/fonts/RaananaBold.svg) format('svg');
   font-style: normal
 }
+@font-face {
+  font-family: OswaldLight;
+  src: url(/theme/9media/fonts/Oswald-Light.eot);
+  src: url(/theme/9media/fonts/Oswald-Light.eot) format('embedded-opentype'), url(/theme/9media/fonts/Oswald-Light.woff) format('woff'), url(/theme/9media/fonts/Oswald-Light.ttf) format('truetype'), url(/theme/9media/fonts/Oswald-Light.svg) format('svg');
+  font-style: normal
+}
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 @import url(https://fonts.googleapis.com/css?family=Merriweather);
 @import url(https://fonts.googleapis.com/css?family=Oswald);
