--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -66,7 +66,7 @@
 }
 
 @font-face {
-    font-family: 'Oswald Light';
+    font-family: OswaldLight;
     src: url(/theme/9media/fonts/Oswald-Light.eot);
     src: url(/theme/9media/fonts/Oswald-Light.eot) format('embedded-opentype'), url(/theme/9media/fonts/Oswald-Light.woff) format('woff'), url(/theme/9media/fonts/Oswald-Light.ttf) format('truetype'), url(/theme/9media/fonts/Oswald-Light.svg) format('svg');
     font-style: normal
