--- a/theme/9media/templates/blocks/navigation.html
+++ b/theme/9media/templates/blocks/navigation.html
@@ -2,8 +2,8 @@
 	<nav  role="navigation" class="top-navigation">
         <!-- Bouton home 9media -->
 		<div class="home">
-			<a href="https://welcometoparadise.chemin-neuf.fr/fr/" class="ng-scope">
-			<img alt="" style="height:90px;" class="img-responsive" ng-src="/dam?media-id=5a6f4c1d396588d25e999bd9&amp;">
+			<a ng-href="$location.path()" class="ng-scope">
+			<img alt="" style="height:90px;" class="img-responsive" ng-src="/dam?media-id=5bb4c4d3396588495a5ef64d&amp;">
 			</a>
 		</div>
 
