--- a/theme/9media/templates/blocks/carrousel_fullWidth.html
+++ b/theme/9media/templates/blocks/carrousel_fullWidth.html
@@ -7,7 +7,7 @@
   border-radius: 2em;
 }
  }        
-        .carousel-control{
+.carousel-control{
     background-image: none; 
 }
 .carousel-control span{top:45%}
@@ -38,9 +38,16 @@
             left: 0;
             transform: translate3d(0, 0, 0);
         }
+ .carousel-indicators .fleche {
+      font-family:hautecombe;
+      font-size: 3.5em;
+      opacity: 0.8;
+      color: white;
+ }
+ .carousel-indicators .gauche {left:10%}
+ .carousel-indicators .droite {right: 10%;width: 0%; margin-left:0%;}
 
-
-  .carousel,
+.carousel,
 .item,
 .active {
     height: 100%;
@@ -104,13 +111,7 @@
         .homepage_txt p:nth-of-type(3), p:nth-of-type(4){font-size:18px; }*/
 }
  
- .carousel-indicators .fleche {
-      font-family:hautecombe;
-      font-size: 3.5em;
-      opacity: 0.8;
- }
- .carousel-indicators .fleche .gauche {left:10%}
- .carousel-indicators .fleche .droite {right: 10%;width: 0%; margin-left:0%;}
+
 
 
 
@@ -118,7 +119,7 @@
 
 <div id="{{'block'+block.id}}" class="carousel slide carousel-fade" ng-controller="FWCarouselController as carouselCtrl">
   <ol class="carousel-indicators">
-    <span class="fleche gauche">e</span>
+    <span class="fleche gauche" ng-click="carouselCtrl.slideTo($index-1)">e</span>
     <li ng-repeat="content in carouselCtrl.contents" 
       ng-if="content.fields[blockConfig.imageField]" 
       data-target="{{'block'+block.id}}"
@@ -126,7 +127,7 @@
       ng-class="{'active':$first}"
       ng-click="carouselCtrl.slideTo($index)">
     </li>
-    <span class="fleche droite">d</span>
+    <span class="fleche droite" ng-click="carouselCtrl.slideTo($index+1)">d</span>
   </ol>
 
   <div class="carousel-inner">
